@@ -1,3 +1,8 @@
+2009-08-30  Juanma Barranquero  <lekktu@gmail.com>
+
+	* subr.el (do-after-load-evaluation): Fix last change: use `mapc'
+	instead of `dolist' to avoid a recursive require when bootstrapping.
+
 2009-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/lisp.el (field-complete): Use minibuffer-complete.
